--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 {% include base_path %}
 
 <div class="page__footer-follow" style="text-align: center">
-    eren.kotar [AT] std.bogazici.edu [DOT] tr
+    erenkotar [AT] hotmail [DOT] com
 
 </div>
