--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -35,13 +35,13 @@
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.linkedin %}
-        <li><a href="{{ author.linkedin }}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
+        <li><a href="{% if author.linkedin contains 'http' %}{{ author.linkedin }}{% else %}https://www.linkedin.com/in/{{ author.linkedin }}{% endif %}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
       {% endif %}
       {% if author.github %}
-        <li><a href="{{ author.github }}"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
+        <li><a href="{% if author.github contains 'http' %}{{ author.github }}{% else %}https://github.com/{{ author.github }}{% endif %}"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
       {% endif %}
       {% if author.researchgate %}
-        <li><a href="{{ author.researchgate }}"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> ResearchGate</a></li>
+        <li><a href="{{ author.researchgate }}"><i class="ai ai-researchgate-square ai-fw" aria-hidden="true"></i> ResearchGate</a></li>
       {% endif %}
       {% if author.spotify %}
         <li><a href="{{ author.spotify }}"><i class="fab fa-fw fa-spotify" aria-hidden="true"></i> Spotify</a></li>
